--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PUF</string>
+    <string name="instructions">Keep your device in a flat surface. Don\'t move.</string>
+    <string name="get_key">Get the key!</string>
+    <string name="reset">Reset</string>
 </resources>
