read events and show waiting

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="instructions">Keep your device in a flat surface. Don\'t move.</string>
     <string name="get_key">Get the key!</string>
     <string name="reset">Reset</string>
+    <string name="wait">Reading…</string>
 </resources>
